Always do model identification
See merge request main/Sumatra!1978

sumatra-commit: 28e7e5d1984c187e2147b824fd1c1b74ca785977